--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang="es">
 <head>
   <!-- Required meta tags -->
-  <meta name="author" content="">
+  <meta name="author" content="marely">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
