--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <!doctype html>
 <html lang="es">
+
 <head>
   <!-- Required meta tags -->
   <meta name="author" content="marely">
@@ -10,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/tareaPokemon.css">
+  <link rel="stylesheet" href="css/estiloPokedex.css">
   <link rel="icon" href="multimedia/images/pokemon.ico" type="image/x-ico">
   <link rel="stylesheet"
     href="https://assets.pokemon.com//assets/cms2-es-es/img/misc/virtual-backgrounds/masters/forest.jpg">
@@ -24,23 +25,32 @@
     <div class="d-flex flex-column">
       <div id="caja-imagen-pokemon" class="d-flex align-items-end justify-content-center"
         style="width: 600px; height: 480px;">
-        <img id="img-pokemon" style="width:50%" 
+        <img id="img-pokemon" style="width:50%"
           src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
           alt="imagen-pokemon">
       </div>
-      <div class="mt-3 mb-1"></div>
-      <h1 class="text-center">#1 bulbasour</h1>
+
     </div>
 
 
-    <div class="d-flex flex-row">
-      <!-- flecha izquierda -->
-      <div id="f-left" class="cajas-flechas d-flex align-items-center justify-content-center">
-        <img src="multimedia/images/flecha-izq.png" style="border-radius: 50%; width:50%;" alt="flecha-izquierda">
-      </div>
-      <!-- flecha derecha -->
-      <div id="f-right" class="cajas-flechas d-flex align-items-center justify-content-center">
-        <img src="multimedia/images/flecha-der.png" style="border-radius: 50%; width:50%;" alt="flecha-derecha">
+
+
+    <div class="d-flex flex-column">
+
+      <div class="mt-3 mb-1">
+        <h1 class="text-center">#1 bulbasour</h1>
+      </div>F
+
+      <div class="d-flex flex-row">
+
+        <!-- flecha izquierda -->
+        <div id="f-left" class="cajas-flechas d-flex align-items-center justify-content-center">
+          <img src="multimedia/images/flecha-izq.png" style="border-radius: 50%; width:50%;" alt="flecha-izquierda">
+        </div>
+        <!-- flecha derecha -->
+        <div id="f-right" class="cajas-flechas d-flex align-items-center justify-content-center">
+          <img src="multimedia/images/flecha-der.png" style="border-radius: 50%; width:50%;" alt="flecha-derecha">
+        </div>
       </div>
     </div>
   </div>
@@ -52,7 +62,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <script src="js/tareaPokemon.js"></script>
+  <script src="js/pokedex.js"></script>
 
 </body>
 
