--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="css/estiloPokedex.css">
-  <link rel="icon" href="multimedia/images/pokemon.ico" type="image/x-ico">
+  <link rel="icon" href="images/pokemon.ico" type="image/x-ico">
   <title>Pokedex</title>
 </head>
 
@@ -38,11 +38,11 @@
 
           <!-- flecha izquierda -->
           <div id="f-left" class="cajas-flechas d-flex align-items-center justify-content-center">
-            <img src="multimedia/images/flecha-izq.png" style="border-radius: 50%; width:50%;" alt="flecha-izquierda">
+            <img src="images/flecha-izq.png" style="border-radius: 50%; width:50%;" alt="flecha-izquierda">
           </div>
           <!-- flecha derecha -->
           <div id="f-right" class="cajas-flechas d-flex align-items-center justify-content-center">
-            <img src="multimedia/images/flecha-der.png" style="border-radius: 50%; width:50%;" alt="flecha-derecha">
+            <img src="images/flecha-der.png" style="border-radius: 50%; width:50%;" alt="flecha-derecha">
           </div>
         </div>
       </div>
