--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- pokemon, numero y nombre -->
     <div class="row justify-content-center align-items-center flex-wrap">
       <div class="col-md-6 text-center">
-        <div id="caja-imagen-pokemon" class="d-flex align-items-end justify-content-center"
+        <div id="img-box" class="d-flex align-items-end justify-content-center"
           style="width: 100%; height: 480px;">
           <img id="img-pokemon" class="img-fluid"
             src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
