--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/estiloPokedex.css">
+  <link rel="stylesheet" href="css/estiloPokemon.css">
   <link rel="icon" href="images/pokemon.ico" type="image/x-ico">
   <title>Pokedex</title>
 </head>
@@ -37,12 +37,12 @@
         <div class="d-flex flex-row justify-content-center">
 
           <!-- flecha izquierda -->
-          <div id="f-left" class="cajas-flechas d-flex align-items-center justify-content-center">
-            <img src="images/flecha-izq.png" style="border-radius: 50%; width:50%;" alt="flecha-izquierda">
+          <div id="id-arrow-left" class="cajas-flechas d-flex align-items-center justify-content-center">
+            <img src="images/arrow-left.png" style="border-radius: 50%; width:50%;" alt="flecha-izquierda">
           </div>
           <!-- flecha derecha -->
-          <div id="f-right" class="cajas-flechas d-flex align-items-center justify-content-center">
-            <img src="images/flecha-der.png" style="border-radius: 50%; width:50%;" alt="flecha-derecha">
+          <div id="id-arrow-right" class="cajas-flechas d-flex align-items-center justify-content-center">
+            <img src="images/arrow-right.png" style="border-radius: 50%; width:50%;" alt="flecha-derecha">
           </div>
         </div>
       </div>
@@ -56,7 +56,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <script src="js/pokedex.js"></script>
+  <script src="js/pokemon.js"></script>
 
 </body>
 
