--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 </head>
 
 <body>
-  <div id="container" class="container mt-5">
-
+  <div id="container" class="container-fluid d-flex align-self-center justify-content-lg-center">
+    <div id="row1" class="row"></div>
     <!-- pokemon, numero y nombre -->
-    <div class="row justify-content-center align-items-center flex-wrap">
+    <div class="row d-flex justify-content-center align-items-center">
+   
       <div class="col-md-6 text-center">
         <div id="img-box" class="d-flex align-items-end justify-content-center"
-          style="width: 100%; height: 480px;">
+          style="width: 100%; height: 400px;">
           <img id="img-pokemon" class="img-fluid"
             src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
             alt="imagen-pokemon">
@@ -29,9 +30,9 @@
 
       <div class="col-md-6 text-center">
 
-        <div class="mt-3 mb-1">
-          <h1 id="h-id" class="text-center">#1</h1>
+        <div class="mt-3">
           <h1 id="h-name" class="text-center">bulbasaur</h1>
+          <h1 id="h-id" class="text-center">#1</h1>
         </div>
 
         <div class="d-flex flex-row justify-content-center">
