--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-  <div id="container" class="container-fluid d-flex align-self-center justify-content-lg-center">
-    <div id="row1" class="row"></div>
-    <!-- pokemon, numero y nombre -->
-    <div class="row d-flex justify-content-center align-items-center">
-   
+  <div id="container" class="container-fluid d-flex justify-content-center align-items-center ">
+  
+      <!-- pokemon, numero y nombre -->
+    <div class="row d-flex justify-content-center align-items-center py-5">
+  
       <div class="col-md-6 text-center">
         <div id="img-box" class="d-flex align-items-end justify-content-center"
           style="width: 100%; height: 400px;">
