--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="row d-flex align-items-center py-5">
   
       <div class="col-md-7 text-center ps-md-5">
-        <div id="img-box" class="d-flex align-items-end justify-content-end"
+        <div id="img-box" class="d-md-flex align-items-end justify-content-end"
           style="width: 100%; height: 400px;">
           <img id="img-pokemon" class="img-fluid"
             src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
