--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 </head>
 
 <body>
-  <div id="container" class="container-fluid ">
-  
-      <!-- pokemon, numero y nombre -->
-    <div class="row d-flex align-items-center py-5">
-  
-      <div class="col-md-7 text-center ps-md-5">
-        <div id="img-box" class="d-md-flex align-items-end justify-content-end"
-          style="width: 100%; height: 400px;">
+  <div id="container" class="container-fluid">
+
+    <!-- pokemon, numero y nombre -->
+    <div class="row">
+
+      <div id="box-pokemon" class="col-md-7 text-center ps-md-5">
+        <div id="img-box" class="d-flex align-items-end justify-content-md-end" style="width: 100%; height: 400px;">
           <img id="img-pokemon" class="img-fluid"
             src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
             alt="imagen-pokemon">
@@ -29,7 +28,7 @@
       </div>
 
       <div class="col-md-5 text-center">
-
+        <!-- caja textos: nombre y numero -->
         <div class="mt-3">
           <h1 id="h-name" class="text-center">bulbasaur</h1>
           <h1 id="h-id" class="text-center">#1</h1>
