--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-  <div id="container" class="container-fluid">
+  <div id="container" class="container-fluid vh-100 m-0 d-flex align-items-center">
 
     <!-- pokemon, numero y nombre -->
-    <div class="row">
+    <div class="row w-100">
 
-      <div id="box-pokemon" class="col-md-7 text-center ps-md-5">
+      <div id="box-pokemon" class="col-md-7 text-center d-flex align-items-center ps-md-5">
         <div id="img-box" class="d-flex align-items-end justify-content-md-end" style="width: 100%; height: 400px;">
           <img id="img-pokemon" class="img-fluid"
             src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
@@ -37,11 +37,11 @@
         <div class="d-flex flex-row justify-content-center">
 
           <!-- flecha izquierda -->
-          <div id="id-arrow-left" class="cajas-flechas d-flex align-items-center justify-content-center">
+          <div id="id-arrow-left" class="box-arrows d-flex align-items-center justify-content-center">
             <img src="images/arrow-left.png" style="border-radius: 50%; width:50%;" alt="flecha-izquierda">
           </div>
           <!-- flecha derecha -->
-          <div id="id-arrow-right" class="cajas-flechas d-flex align-items-center justify-content-center">
+          <div id="id-arrow-right" class="box-arrows d-flex align-items-center justify-content-center">
             <img src="images/arrow-right.png" style="border-radius: 50%; width:50%;" alt="flecha-derecha">
           </div>
         </div>
